@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120110"
-#define public MagickPackageReleaseDate "snapshot-20120110"
+#define public MagickPackageVersionAddendum ".020120112"
+#define public MagickPackageReleaseDate "snapshot-20120112"
