@@ -1,3 +1,9 @@
+2012-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/effect.c (DespeckleImage): Using schedule(static,4)
+	blocks any opportunity for speedup.  This was a performance
+	regression.  Oops!
+
 2012-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* wand/magick_wand.c (MagickExtentImage): Added
